# c99-raylib5-gl3-3dgame-starter

./: .gitignore  CMakeLists.txt  LICENSE  QUESTIONS.md  README.md
.github/: FUNDING.yml
assets/resources/animations/: Idle.m3d  Running.m3d  Slow_Run.m3d
assets/resources/models/: Character.m3d  SM_Cube.mtl  SM_QuarterCylinder.glb  SM_QuarterCylinder.mtl  SM_Ramp.mtl  X_Bot.m3d  character.mtl
assets/resources/scenes/: unrealthirdperson.json
assets/resources/shaders/glsl330/: bloom.fs  default.fs  lightbasic-fs.glsl  lightbasic-vs.glsl  raymarching.fs
assets/src/: Character.blend  MI_Grid_Gray.psd  Running.blend  SM_Cube.blend  SM_QuarterCylinder.blend  SM_Ramp.blend  SM_Ramp_diffuse.psd  character.blend  character.blend1  icon.pptx  launcher.pptx
docs/README/: diagrams.pptx
lib/cJSON/: CMakeLists.txt
platform/: CMakeLists.txt
platform/core/: CMakeLists.txt
platform/core/include/: assets.h  component.h  config.h  core.h  resolutions.h  shaders_postprocessing.h  tiling.h
platform/core/src/: camera.c  camera1.c  common.c  common.h  component.c  console.c  console.h  core.c  input.c  input.h  launcher.c  launcher.h  level.h  level1.c  level_unrealthirdperson.c  light.c  prefabCamera.c  resources.c  shaders_postprocessing.c  skybox.c  tiling.c  utils.c
platform/demos/: CMakeLists.txt
platform/engine/: CMakeLists.txt
platform/engine/include/: assets.h  camera.h  config.h  console.h  control.h  eng_assets.h  eng_camera.h  eng_config.h  eng_console.h  eng_control.h  eng_gameobject.h  eng_input.h  eng_json.h  eng_lighting.h  eng_material.h  eng_render.h  eng_scene.h  eng_scene_json.h  eng_screen.h  eng_skybox.h  eng_text.h  eng_tick.h  gam_screen_logo.h  gameobject.h  input.h  light.h  lighting.h  material.h  render.h  resolutions.h  resources.h  scene_launcher.h  screen_logo.h  skybox.h  text.h  tick.h
platform/engine/src/: assets.c  camera.c  console.c  control.c  eng_assets.c  eng_camera.c  eng_console.c  eng_control.c  eng_gameobject.c  eng_input.c  eng_json.c  eng_lighting.c  eng_material.c  eng_render.c  eng_scene.c  eng_scene_json.c  eng_screen.c  eng_skybox.c  eng_text.c  eng_tick.c  gam_screen_logo.c  gameobject.c  input.c  light.c  lighting.c  material.c  render.c  resources.c  scene_launcher.c  screen_logo.c  skybox.c  text.c  tick.c
platform/game/: CMakeLists.txt
platform/game/include/: gam_game.h  game.h
platform/game/src/: camera_thirdperson.c  camera_thirdperson.h  gam_game.c  gam_loader_unrealthirdperson.c  gam_loader_unrealthirdperson.h  gam_screen_menu.c  gam_screen_menu.h  gam_screen_unrealthirdperson.c  gam_screen_unrealthirdperson.h  gam_screens.h  game.c  loader_unrealthirdperson.c  loader_unrealthirdperson.h  renderpipeline.c  scene_unrealthirdperson.c  scene_unrealthirdperson.h  scene_unrealthirdperson_loader.c  scene_unrealthirdperson_loader.h  scenes.h  screen_gameplay.c  screen_gameplay_loader.c  screen_gameplay_loader.h  screen_menu.c  screen_menu.h  screen_unrealthirdperson.c  screen_unrealthirdperson.h  screens.h
platform/mygame/: CMakeLists.txt
platform/mygame/include/: demos.h
platform/mygame/src/: demo_shadowmap.c  engine.c  level_unrealthirdperson.c  level_unrealthirdperson.h  mygame.c  scene_unrealthirdperson.c  scene_unrealthirdperson.h
standalone/: CMakeLists.txt
standalone/desktop_win64/: CMakeLists.txt
standalone/desktop_win64/src/: main.cpp
standalone/steamdeck_win64/: CMakeLists.txt
standalone/steamdeck_win64/src/: main.cpp
tools/blender/: io_scene_m3d.py
tools/ci/: clean.bat  dev.bat  devassets.bat  devrefresh.bat  install.bat  release.bat  watch.bat
tools/quality/: static-analysis.cppcheck
